--- a/Index.css
+++ b/Index.css
@@ -138,15 +138,15 @@ button {
 	font-family: abril fatface;
 	color: white;
 	text-shadow: 0px 4px 8px #F8C471;
-	margin-left: 320px;
-  width: 100px;
+    width: 100px;
+	margin-left: 100px;
+	background: black;
 }
 
 .open {
 	font-family: abril fatface;
 	color: white;
 	text-shadow: 0px 4px 8px #F8C471;
-	margin-left: 200px;
 	margin-bottom: 15px;
 	margin-top: 15px;
 }
